fixed titles wrapping wrong on small devices

--- a/src/components/ContactCard/index.scss
+++ b/src/components/ContactCard/index.scss
@@ -9,7 +9,7 @@
     box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
         -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
     transition: 0.4s;
-    margin-top: 45px;
+    margin-top: 25px;
     margin-bottom: 30px;
     margin-right: 10px;
     margin-left: 10px;
