--- a/src/components/Contacts/index.scss
+++ b/src/components/Contacts/index.scss
@@ -24,8 +24,11 @@
 
 .backgroundTitle {
     z-index: -1;
-    position: absolute;
     width: 100%;
+    height: 100%;
+    margin: 0;
+    display: inline;
+    //white-space: nowrap;
 }
 
 .card-text {
